--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="bosswave_router_port_title">BOSSWAVE Router Port</string>
     <string name="bosswave_router_port_val">50037</string>
     <string name="bosswave_key_base64_key">bosswave_key_base64</string>
-    <string name="bosswave_key_base64_title">BOSSWAVE key in Base64</string>
+    <string name="bosswave_key_base64_title">BOSSWAVE key in Base64 (not a good idea)</string>
     <string name="bosswave_key_base64_val">MvQf3NbUJZbup7ToYhfVitMeGPX8vf0oQCZnp/TXpG5vu5ZfksWQzeqM5PETdum72J1a6UexHHzF+69v2HTpzNcCCJeiavGi9EIUAwjmoLBMSQgjFQUhS2FpZmVpIENoZW4gPGthaWZlaUBiZXJrZWxleS5lZHU+BgpNYXN0ZXIgS2V5AN0gC2JfUURxujnRcme3c9rxhW1CPnraNY563ZFRga8mpJVGGb3pqNYRc0cv4NONnZIRgJSfVhSdjR0Mb2tatwY=</string>
     <string name="camera_width_key">camera_width</string>
     <string name="camera_width_title">Camera Width (pixel)</string>
