--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="request_permission">This sample needs camera permission.</string>
 
     <string name="grpc_server_addr_key">grpc_server_addr</string>
-    <string name="grpc_server_addr_title">Grpc Server Address</string>
+    <string name="grpc_server_addr_title">GRPC Server Address</string>
     <string name="grpc_server_addr_val">castle.cs.berkeley.edu</string>
     <string name="grpc_server_port_key">grpc_server_port</string>
-    <string name="grpc_server_port_title">Grpc Server Port</string>
+    <string name="grpc_server_port_title">GRPC Server Port</string>
     <string name="grpc_server_port_val">50001</string>
     <string name="bosswave_router_addr_key">bosswave_router_addr</string>
     <string name="bosswave_router_addr_title">BOSSWAVE Router Address</string>
