--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">CellMate</string>
+    <string name="camera_fragment">Camera Fragment</string>
     <string name="img_desc">Background Image</string>
     <string name="capture">Capture</string>
     <string name="on">On</string>
