--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="control">Control</string>
     <string name="on">On</string>
     <string name="off">Off</string>
+    <string name="minus">-</string>
+    <string name="plus">+</string>
     <string name="none">None</string>
     <string name="settings">Settings</string>
     <string name="progressBar">ProgressBar</string>
